--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -6,10 +6,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+        STATUS_DB_CONFIG: $GITHUB_WORKSPACE/test/dummy_statusdb.yaml
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
-
+        python-version: [3.5, 3.8]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
