--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-        STATUS_DB_CONFIG: ${GITHUB_WORKSPACE}/test/dummy_statusdb.yaml
+        STATUS_DB_CONFIG: "${GITHUB_WORKSPACE}/test/dummy_statusdb.yaml"
     strategy:
       matrix:
         python-version: [3.5, 3.8]
