--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -5,8 +5,6 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-        STATUS_DB_CONFIG: "${GITHUB_WORKSPACE}/test/dummy_statusdb.yaml"
     strategy:
       matrix:
         python-version: [3.5, 3.8]
@@ -21,11 +19,10 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python setup.py install
-    - name: Echo variables
-      run: |
-        echo "Home: ${HOME}"
-        echo "STATUS_DB_CONFIG: ${STATUS_DB_CONFIG}"
-        echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
     - name: Test with unittest
+      env:
+        STATUS_DB_CONFIG: $GITHUB_WORKSPACE/test/dummy_statusdb.yaml
       run: |
+        echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+        echo "STATUS_DB_CONFIG: $STATUS_DB_CONFIG"
         cd test; python -m unittest test_project_progress.py
